# minimu9-ahrs

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: minimu9-ahrs-cal  minimu9-ahrs-cal-data
scripts/: calibrate_mag.py  calibrate_mag.sh
src/: i2c_bus.cpp  lsm6.cpp  main.cpp  minimu9-ahrs.cpp  minimu9.cpp
